src/app/design/atoms/button/button.component.scss
@import "/src/screens.scss";

:host {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: var(--spacer-1);

  &:focus-visible {
    outline: var(--focus-outline);
  }

  :disabled {
    cursor: not-allowed;
  }
}

.btn {
  &__text {
    &--large {
      font-weight: bold;
    }
  }

  &__spinner {
    margin-left: var(--spacer-2);
    width: 20px;
    height: 20px;
  }
}

